# value-investment-agent

./: .dockerignore  AGENTS.md  DEVOPS.md  README.md  TECHNICAL_EVALUATION.md  docker-compose.yml
finance-agent-core/: .dockerignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  main.py  pyproject.toml  reproduce_event_adapter.py  reproduce_outputs.py  verify_adapter.py
finance-agent-core/api/: server.py
finance-agent-core/config/: fundamental_gate_profiles.json  fundamental_live_replay_cohort_config.json  fundamental_live_replay_cohort_config_ci.json
finance-agent-core/docs/: core-agents-error-handling.md  debate-agent-error-handling.md  development_guidelines.md  error-handling-overall-progress.md  financial-news-agent-error-handling.md  frontend-integration-error-handling.md  fundamental-agent-error-handling.md  fundamental_analysis_refactor_todo.md  fundamental_backtest_runbook.md  fundamental_cohort_release_checklist_template.md  fundamental_cohort_report_artifact_spec.md  fundamental_forward_signal_calibration_runbook.md  fundamental_monte_carlo_batch_profiling.md  fundamental_reinvestment_clamp_profile_runbook.md  fundamental_replay_error_codes.md  fundamental_replay_input_contract.md  missing_values.md  technical-agent-error-handling.md  technical_governance_report_runbook.md  xbrl_data_quality_todo.md
finance-agent-core/reports/: .gitignore  README.md  fb005_consensus_cohort_slice3.json  fb005_consensus_cohort_slice4.json  fb005_consensus_cohort_slice5.json  fb005_consensus_cohort_slice5b.json  fb005_consensus_cohort_slice6.json  fb005_consensus_cohort_slice7.json  fb005_msft_replay_slice7.json  forward_signal_calibration.mapping.ci.json  forward_signal_calibration.mapping_forward_signal_calibration_ci_20260305_testsha.json  forward_signal_calibration_dataset_forward_signal_calibration_ci_20260305_testsha.jsonl  forward_signal_calibration_pipeline_report.json  forward_signal_calibration_pipeline_report_forward_signal_calibration_ci_20260305_testsha.json  fundamental_backtest_report.json  fundamental_backtest_report_ci.json  fundamental_backtest_report_ci_s25.json  fundamental_backtest_report_s12.json  fundamental_backtest_report_s13_prod.json  fundamental_backtest_report_s14_prod.json  fundamental_backtest_report_s17_prod.json  fundamental_backtest_report_s26_prod.json  fundamental_backtest_report_s27_prod.json  fundamental_backtest_report_s28_prod.json  fundamental_backtest_report_s29_prod.json  fundamental_backtest_report_s30_prod.json  fundamental_backtest_report_s30_prod_p15.json  fundamental_backtest_report_s4_broad.json  fundamental_cohort_release_checklist_s12_2026-03-09.md  fundamental_cohort_release_checklist_s13_prod_2026-03-09.md  fundamental_cohort_release_checklist_s14_prod_2026-03-09.md  fundamental_cohort_release_checklist_s17_prod_2026-03-09.md  fundamental_cohort_release_checklist_s19_live_2026-03-09.md  fundamental_cohort_release_checklist_s20_live_2026-03-09.md  fundamental_cohort_release_checklist_s21_live_2026-03-09.md  fundamental_cohort_replay_s4.json  (+38 more)
(+1964 files in other folders)
