[project]
name = "finance-agent-core"
version = "0.1.0"
description = "Neuro-Symbolic Valuation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.10.0",
    "networkx>=3.4.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
]

[tool.setuptools]
packages = ["src"]
