[project]
name = "finance-agent-core"
version = "0.1.0"
description = "Neuro-Symbolic Valuation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.10.0",
    "networkx>=3.4.0",
    "pandas>=2.2.0",
    "numpy>=1.21.3,<2.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "ddgs>=6.3.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.110.0",
    "langserve[all]>=0.3.0",
    "uvicorn>=0.27.0",
    "edgartools>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg-pool>=3.2.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "trafilatura>=1.8.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentencepiece>=0.1.99",
    "httpx>=0.28.1",
    "fastembed>=0.2.0",
    "fracdiff>=0.9.0",
    "statsmodels>=0.13.0,<0.14.0",
    "scikit-learn>=1.0.0",
    "asyncpg>=0.31.0",
]

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
